# ros2_robot_project

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/Tp2_exercice/share/Tp2_exercice/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/Tp2_exercice/: package.xml  setup.cfg  setup.py
src/Tp2_exercice/Tp2_exercice/: multi_turtle_manager.py
src/Tp3_exercice1/: package.xml  setup.cfg  setup.py
src/Tp3_exercice1/Tp3_exercice1/: emergency_stop.py
src/Tp4_exercice2/: package.xml  setup.cfg  setup.py
src/Tp4_exercice2/Tp4_exercice2/: config_client.py  config_server.py
src/fleet_interfaces/: CMakeLists.txt  package.xml
src/fleet_interfaces/msg/: FleetCommand.msg
src/fleet_interfaces/srv/: ConfigureRobot.srv
src/fleet_manager/: package.xml  setup.py
src/interface_test/: package.xml  setup.py
src/interface_test/interface_test/: battery_publisher.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: BatteryStatus.msg
src/params_practice/: package.xml  setup.cfg  setup.py
src/params_practice/config/: dev_config.yaml  multi_robot_config.yaml  prod_config.yaml  robot_config.yaml  sensor_config.yaml  test_config.yaml
src/params_practice/launch/: basic_params_launch.py  flexible_launch.py  multi_robot_launch.py  sensor_manager_launch.py
src/params_practice/params_practice/: basic_param_node.py  battery_monitor_params.py  described_param_node.py  dynamic_param_node.py  sensor_manager.py
