<?xml version="1.0"?>
<package format="3">
  <name>Tp4_exercice2</name>
  <version>0.0.0</version>
  <description>TP4 Exercice 2 - Robot Configuration Service</description>
  <maintainer email="samuel@todo.todo">samuel</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>fleet_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
